update font size

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -19,6 +19,7 @@ code {
         color: #ffffff;
         display: flex;
         flex-direction: column;
+        font-size: 2rem;
         justify-content: center;
         min-height: 100vh;
     }
