adds react dev tools

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -6,4 +6,9 @@
         background: #6b177c;
         border: 2px ridge #6b177c;
     }
+
+    &--warning {
+        background: #ed7e00;
+        border: 2px ridge #ed7e00;
+    }
 }
